#2116 Fix delete binding conflict for Resources and Model Elements
- Enable the new Delete Binding in either a Semantic Browser context or
Interpreter view
- Fix error when trying to delete a category in the Semantic Browser

Change-Id: I0b9028e402636b5e5280d6c5f0733dd2eda4d5fc
Signed-off-by: Sandu Postaru <sandu.postaru@thalesgroup.com>