@@ -13,6 +13,7 @@
 package org.polarsys.capella.core.platform.sirius.ui.handlers;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.eclipse.core.commands.AbstractHandler;
 import org.eclipse.core.commands.ExecutionEvent;
@@ -21,6 +22,7 @@ import org.eclipse.core.expressions.IEvaluationContext;
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
+import org.polarsys.capella.common.ef.ExecutionManager;
 import org.polarsys.capella.common.helpers.TransactionHelper;
 import org.polarsys.capella.core.platform.sirius.ui.commands.CapellaDeleteCommand;
 
@@ -31,20 +33,28 @@ public class DeleteHandler extends AbstractHandler {
 
     IEvaluationContext context = (IEvaluationContext) event.getApplicationContext();
     ISelection selection = (ISelection) context.getVariable("selection");
-    
+
     if (selection instanceof IStructuredSelection) {
-      List<EObject> linksToRemove = ((IStructuredSelection) selection).toList();
-      
-      CapellaDeleteCommand command = new CapellaDeleteCommand(TransactionHelper.getExecutionManager(linksToRemove),
-          linksToRemove, true, withConfirmDeletion(), true);
-      command.setPreventProtectedElementsDeletion(true);
-      if (command.canExecute()) {
-        command.execute();
+      List<?> elementsToRemove = ((IStructuredSelection) selection).toList();
+      List<EObject> eObjectsToRemove = elementsToRemove.stream()//
+          .filter(EObject.class::isInstance) //
+          .map(EObject.class::cast).collect(Collectors.toList());
+
+      if (!eObjectsToRemove.isEmpty()) {
+
+        ExecutionManager executionManager = TransactionHelper.getExecutionManager(eObjectsToRemove);
+        CapellaDeleteCommand deleteCommand = new CapellaDeleteCommand(executionManager, elementsToRemove, true,
+            withConfirmDeletion(), true);
+        deleteCommand.setPreventProtectedElementsDeletion(true);
+
+        if (deleteCommand.canExecute()) {
+          deleteCommand.execute();
+        }
       }
     }
     return null;
   }
-  
+
   protected boolean withConfirmDeletion() {
     return true;
   }
